@@ -2,17 +2,17 @@
 
 [![Gem Version](https://badge.fury.io/rb/jruby_art.svg)](https://badge.fury.io/rb/jruby_art) ![Travis CI](https://travis-ci.org/ruby-processing/JRubyArt.svg)
 
-A new version for jdk11 use, does not require an installed `vanilla processing`, however if installed you can use processing-ide to download libraries. Configuration file is incompatible with that of previous version of JRubyArt (and you should move or rename old `config.yml` to keep it). This version will run with a default configuration file but you won't be able to use processing libraries, until you match configuration to your setup.
+A new version for jdk11 use, does not require an installed `vanilla processing`, however if installed you can use processing-ide to download libraries. Configuration file is incompatible with that of previous version of JRubyArt (and you should move or rename old `config.yml` to keep it). This version will run with a default configuration file but you won't be able to use processing libraries, until you match configuration to your setup. Illegal reflective access warning should be fixed for this release (by using JOGL-2.4.0-rc jars), though you may need to define `JAVA_HOME` for JRuby warnings to be suppressed.
 
 ## Requirements
 
-A clean start for `jruby_art` with custom processing core included, built for [jruby-9.2.11.0](http://jruby.org/download) see [wiki](https://github.com/ruby-processing/JRubyArt/wiki/Building-latest-gem) for building gem from this repo.
+A clean start for `jruby_art` with custom processing core included, built for [jruby-9.2.11.1](http://jruby.org/download) see [wiki](https://github.com/ruby-processing/JRubyArt/wiki/Building-latest-gem) for building gem from this repo.
 
 ## Requirements
 
-A suitable version of ruby (MRI `ruby 2.3+` or `jruby-9.2.11.0`) to download gem.
+A suitable version of ruby (MRI `ruby 2.4+` or `jruby-9.2.11.0`) to download gem. NB: avoid ruby 2.7, it is guaranteed to give you problems (you've been warned)
+Tested and working AdoptOpenJDK 11-13, OpenJ9 14, if you have any issues with opengl sketches with distro installed JDK use a JDK from AdoptOpenJDK.
 
-`open-jdk11.03+` currently FX2D is not included. Currently you can ignore `illegal reflective access` warnings, [see here how to suppress them][warnings]. There may be a linker issue with P2D or P3D sketches with stock openjdk with some linux distros, in which case you might find [Adopt open jdk binaries][adopt] will work for you.
 
 ## Configuration
 
@@ -31,25 +31,13 @@ java_args:
   # Global java_args can be used to suppress reflective access warn
 ```
 
-## Suppressing Reflective Access warnings
-
-Since JRuby-9.2.10.0 it is possible to suppress reflective access warnings by including a `~/.jruby.java_opts` file with following contents:-
-
-```bash
---add-opens java.base/java.lang=ALL-UNNAMED
---add-opens java.desktop/java.awt=ALL-UNNAMED
---add-opens java.desktop/sun.awt=ALL-UNNAMED
---add-opens java.desktop/sun.java2d.opengl=ALL-UNNAMED
-```
-Mainly needed for opengl sketches.
-
 ## Install Steps (assumes you have requirements above)
 
 ```bash
  gem install jruby_art
- k9 --install # installs jruby-complete-9.2.11.0 and downloads and installs samples to ~/k9_samples
+ k9 --install # installs jruby-complete-9.2.11.1 and downloads and installs samples to ~/k9_samples
  cd ~/k9_samples/contributed
- k9 --run jwishy.rb # if you have jruby-9.2.11.0 installed or config `JRUBY: false`
+ k9 --run jwishy.rb # if you have jruby-9.2.11.1 installed or config `JRUBY: false`
  # to use jruby-complete set `JRUBY: false` in config
 ```
 
@@ -99,7 +87,7 @@ k9 --live sketch.rb # pry is bound to Processing.app # needs `jruby -S gem insta
 
 ## Example sketches
 
-[Worked Examples](https://github.com/ruby-processing/JRubyArt-examples) and, [The-Nature-of-Code-Examples-for-JRubyArt](https://github.com/ruby-processing/The-Nature-of-Code-for-JRubyArt) feel free to add your own, especially ruby-2.2+ syntax now we can. These can now be downloaded using `k9 --install` please move existing `k9_samples` if you wish to keep them.
+[Worked Examples](https://github.com/ruby-processing/JRubyArt-examples) and, [The-Nature-of-Code-Examples-for-JRubyArt](https://github.com/ruby-processing/The-Nature-of-Code-for-JRubyArt) feel free to add your own, especially ruby-2.4+ syntax now we can. These can now be downloaded using `k9 --install` please move existing `k9_samples` if you wish to keep them.
 
 [adopt]: https://adoptopenjdk.net/
 [pi]: http://ruby-processing.github.io/JRubyArt/raspberrypi_started/
